--- a/exercicios_webpack/public/index.html
+++ b/exercicios_webpack/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="app.css">
     <title>Document</title>
 </head>
 <body>
+
     <script src="bundle.js"></script>
 </body>
 </html>
